WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242292
[iOS] "A problem repeatedly occurred" error page when safari resuming from background
https://bugs.webkit.org/show_bug.cgi?id=242292
Summary
[iOS] "A problem repeatedly occurred" error page when safari resuming from ba...
Chris Dumez
Reported
2022-07-02 10:48:58 PDT
"A problem repeatedly occurred" error page sometimes shows on iOS when safari resuming from background.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-07-02 10:49:06 PDT
<
rdar://96178034
>
Chris Dumez
Comment 2
2022-07-02 10:59:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2033
EWS
Comment 3
2022-07-03 20:45:17 PDT
Committed
252108@main
(e6e28097b53c): <
https://commits.webkit.org/252108@main
> Reviewed commits have been landed. Closing PR #2033 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug