Tools/TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm
@@ -478,3 +478,79 @@ TEST(WKNavigation, WebProcessLimit)
 
     [WKProcessPool _setWebProcessCountLimit:400];
 }
+
+TEST(WKNavigation, MultipleProcessCrashesRelatedWebViews)
+{
+    auto configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
+    auto webView1 = adoptNS([[WKWebView alloc] initWithFrame:NSMakeRect(0, 0, 100, 100) configuration:configuration.get()]);
+
+    __block bool webview1FinishedLoad = false;
+    __block bool webview2FinishedLoad = false;
+    auto navigationDelegate = adoptNS([[TestNavigationDelegate alloc] init]);
+    [webView1 setNavigationDelegate:navigationDelegate.get()];
+    [navigationDelegate setDidFinishNavigation:^(WKWebView *, WKNavigation *) {
+        webview1FinishedLoad = true;
+    }];
+
+    webview1FinishedLoad = false;
+    [webView1 loadRequest:[NSURLRequest requestWithURL:[[NSBundle mainBundle] URLForResource:@"simple" withExtension:@"html" subdirectory:@"TestWebKitAPI.resources"]]];
+    TestWebKitAPI::Util::run(&webview1FinishedLoad);
+
+    configuration.get()._relatedWebView = webView1.get();
+    auto webView2 = adoptNS([[WKWebView alloc] initWithFrame:NSMakeRect(0, 0, 100, 100) configuration:configuration.get()]);
+    [webView2 setNavigationDelegate:navigationDelegate.get()];
+
+    [navigationDelegate setDidFinishNavigation:^(WKWebView *view, WKNavigation *) {
+        if (view == webView1)
+            webview1FinishedLoad = true;
+        else
+            webview2FinishedLoad = true;
+    }];
+
+    webview2FinishedLoad = false;
+    [webView2 loadRequest:[NSURLRequest requestWithURL:[[NSBundle mainBundle] URLForResource:@"simple" withExtension:@"html" subdirectory:@"TestWebKitAPI.resources"]]];
+    TestWebKitAPI::Util::run(&webview2FinishedLoad);
+
+    // The 2 WebViews should use the same process since they're related.
+    EXPECT_EQ([webView1 _webProcessIdentifier], [webView2 _webProcessIdentifier]);
+
+    // Navigate webView1 and force a process swap.
+    navigationDelegate.get().decidePolicyForNavigationAction = ^(WKNavigationAction *, void (^decisionHandler)(WKNavigationActionPolicy)) {
+        decisionHandler(_WKNavigationActionPolicyAllowInNewProcess);
+    };
+    webview1FinishedLoad = false;
+    [webView1 loadRequest:[NSURLRequest requestWithURL:[[NSBundle mainBundle] URLForResource:@"simple2" withExtension:@"html" subdirectory:@"TestWebKitAPI.resources"]]];
+    TestWebKitAPI::Util::run(&webview1FinishedLoad);
+
+    navigationDelegate.get().decidePolicyForNavigationAction = nil;
+    EXPECT_NE([webView1 _webProcessIdentifier], [webView2 _webProcessIdentifier]);
+
+    // Kill both WebContent processes and make sure that both WebView's get notified of a single crash.
+    __block unsigned webView1CrashCount = 0;
+    __block unsigned webView2CrashCount = 0;
+    [navigationDelegate setWebContentProcessDidTerminate:^(WKWebView * view) {
+        if (view == webView1)
+            ++webView1CrashCount;
+        else
+            ++webView2CrashCount;
+
+        [view reload];
+    }];
+
+    webview1FinishedLoad = false;
+    webview2FinishedLoad = false;
+    kill([webView2 _webProcessIdentifier], 9);
+    kill([webView1 _webProcessIdentifier], 9);
+
+    // The views should get reloaded automatically.
+    TestWebKitAPI::Util::run(&webview1FinishedLoad);
+    TestWebKitAPI::Util::run(&webview2FinishedLoad);
+
+    TestWebKitAPI::Util::spinRunLoop(10);
+
+    EXPECT_EQ(webView1CrashCount, 1U);
+    EXPECT_EQ(webView2CrashCount, 1U);
+
+    EXPECT_NE([webView1 _webProcessIdentifier], 0);
+    EXPECT_NE([webView2 _webProcessIdentifier], 0);
+}
